<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoundFx</string>

    <string name="label_enabled">Enabled</string>
    <string name="label_target">Target loudness</string>
    <string name="label_compressor">Compressor</string>
    <string name="label_comp_threshold">Threshold</string>
    <string name="label_comp_ratio">Ratio</string>
    <string name="label_comp_attack">Attack</string>
    <string name="label_comp_release">Release</string>
    <string name="label_eq">EQ</string>
    <string name="label_eq_low">Low</string>
    <string name="label_eq_mid">Mid</string>
    <string name="label_eq_high">High</string>
    <string name="label_balance">Balance (L / R)</string>
    <string name="btn_test_quiet">Play quiet tone</string>
    <string name="btn_test_loud">Play loud tone</string>
    <string name="status_running">Service status: running</string>
    <string name="status_stopped">Service status: stopped</string>

    <string name="notification_channel_name">Volume Normalization</string>
    <string name="notification_content_title">SoundFx is normalizing volume</string>
</resources>
